# servicenow-api

./: .bumpversion.cfg  .codespellignore  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a2a.json  compose.yml  coverage_full.txt  debug.Dockerfile  entrypoint.sh  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  opencode.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml  vulture_whitelist.py
.github/workflows/: docs.yml  pages.yml  pipeline.yml
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml  starship.toml
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
scratch/: final_cleanup.py  fix_all_validators.py  fix_mcp_defaults.py  fix_mypy.py  fix_mypy_defaults.py  fix_validators.py  fix_vulture_unused.py
scripts/: debug_mcp_tools.py  run_tests.sh  security_sanitizer.py  validate_a2a_agent.py  validate_agent.py  verify_api_integration.py
search/: search_index.json
servicenow_api/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  debug_tool_filter.py  decorators.py  exceptions.py  graph_config.py  inspect_mcp_tools.py  inspect_server_class.py  main_agent.json  main_agent.md  mcp.py  mcp_config.json  mcp_server.py  middlewares.py  models.py  servicenow_a2a.py  servicenow_agent.py  servicenow_api.py  servicenow_api_mcp.py  servicenow_mcp.py  servicenow_models.py  test_agent_tools.py  tools.py  utils.py  version.py
servicenow_api/agent/: AGENTS.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  templates.py
servicenow_api/agent_data/: A2A_AGENTS.md  AGENTS.md  CRON.md  CRON_LOG.md  HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  MEMORY.md  NODE_AGENTS.md  USER.md  chats  mcp_config.json  templates.py
servicenow_api/api/: __init__.py  api_client_base.py  api_client_change.py  api_client_cmdb.py  api_client_devops.py  api_client_incident.py  api_client_knowledge.py  api_client_other.py  api_client_system.py
servicenow_api/mcp/: __init__.py  mcp_account.py  mcp_activity_subscriptions.py  mcp_aggregate.py  mcp_application.py  mcp_attachment.py  mcp_auth.py  mcp_batch.py  mcp_change_management.py  mcp_cicd.py  mcp_cilifecycle.py  mcp_cmdb.py  mcp_custom_api.py  mcp_data_classification.py  mcp_devops.py  mcp_email.py  mcp_flows.py  mcp_hr.py  mcp_import_sets.py  mcp_incidents.py  mcp_knowledge_management.py  mcp_metricbase.py  mcp_misc.py  mcp_plugins.py  mcp_ppm.py  mcp_product_inventory.py  mcp_table_api.py  (+4 more)
test/: conftest.py  test_servicenow_api.py  test_servicenow_models.py
tests/: conftest.py  poc_nested_agent.py  test_action_discovery.py  test_api_auth_errors.py  test_api_brute_force.py  test_api_coverage.py  test_api_massive_coverage.py  test_api_wrapper.py  test_auth_coverage.py  test_change_requests.py  test_concept_parity.py  test_incidents.py  test_init_dynamics.py  test_mcp_server_coverage.py  test_openapi_coverage.py  test_servicenow_api.py  test_servicenow_api_brute_force_coverage.py  test_servicenow_models.py  test_startup.py  test_user.py  test_verify_orchestrator.py  test_workflow_coverage.py  test_workflow_to_mermaid.py
usage/: index.html
(+393 files in other folders)
