[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "servicenow-api"
version = "1.6.20"
description = "Python ServiceNow API Wrapper"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.5",
]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.5",
]

agent = [
    "agent-utilities[agent,logfire]>=0.2.5",
]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.5",
]

[project.scripts]
servicenow-mcp = "servicenow_api.mcp:mcp_server"
servicenow-agent = "servicenow_api.agent:agent_server"

[tool.setuptools.package-data]
servicenow_api = [ "mcp_config.json", "skills/**", "agent/**",]

[tool.setuptools.packages.find]
where = ["."]
