[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "servicenow-api"
version = "1.6.57"
description = "Python ServiceNow API Wrapper"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.31"]

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.2.31"]

agent = [
    "agent-utilities[agent,logfire]>=0.2.31"]

all = [
    "agent-utilities[mcp,agent,logfire]>=0.2.31"]

[project.scripts]
servicenow-mcp = "servicenow_api.mcp_server:mcp_server"

[tool.setuptools.package-data]
servicenow_api = [ "mcp_config.json", "agent_data/**", "skills/**"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
